GH-2568: Get rid of synchronized consumersMonitor
Fixes: #2568

Rework all the `synchronized (this.consumersMonitor)` in the `AbstractMessageListenerContainer`
hierarchy for the `consumersLock.lock()/unlock()`