@@ -62,6 +62,7 @@ import org.springframework.amqp.rabbit.connection.SimpleResourceHolder;
 import org.springframework.amqp.rabbit.listener.support.ContainerUtils;
 import org.springframework.amqp.rabbit.support.ActiveObjectCounter;
 import org.springframework.amqp.rabbit.transaction.RabbitTransactionManager;
+import org.springframework.context.ApplicationEventPublisher;
 import org.springframework.lang.Nullable;
 import org.springframework.scheduling.TaskScheduler;
 import org.springframework.scheduling.concurrent.ThreadPoolTaskScheduler;
@@ -279,7 +280,8 @@ public class DirectMessageListenerContainer extends AbstractMessageListenerConta
 
 	private void addQueues(Stream<String> queueNameStream) {
 		if (isRunning()) {
-			synchronized (this.consumersMonitor) {
+			this.consumersLock.lock();
+			try {
 				checkStartState();
 				Set<String> current = getQueueNamesAsSet();
 				queueNameStream.forEach(queue -> {
@@ -291,6 +293,9 @@ public class DirectMessageListenerContainer extends AbstractMessageListenerConta
 						consumeFromQueue(queue);
 					}
 				});
+			}
+			finally {
+				this.consumersLock.unlock();
 			}
 		}
 	}
@@ -309,7 +314,8 @@ public class DirectMessageListenerContainer extends AbstractMessageListenerConta
 
 	private void removeQueues(Stream<String> queueNames) {
 		if (isRunning()) {
-			synchronized (this.consumersMonitor) {
+			this.consumersLock.lock();
+			try {
 				checkStartState();
 				queueNames.map(queue -> {
 							this.removedQueues.add(queue);
@@ -319,11 +325,15 @@ public class DirectMessageListenerContainer extends AbstractMessageListenerConta
 						.flatMap(Collection::stream)
 						.forEach(this::cancelConsumer);
 			}
+			finally {
+				this.consumersLock.unlock();
+			}
 		}
 	}
 
 	private void adjustConsumers(int newCount) {
-		synchronized (this.consumersMonitor) {
+		this.consumersLock.lock();
+		try {
 			checkStartState();
 			this.consumersToRestart.clear();
 			for (String queue : getQueueNames()) {
@@ -334,9 +344,9 @@ public class DirectMessageListenerContainer extends AbstractMessageListenerConta
 					if (cBQ != null) {
 						// find a gap or set the index to the end
 						List<Integer> indices = cBQ.stream()
-								.map(cons -> cons.getIndex())
+								.map(SimpleConsumer::getIndex)
 								.sorted()
-								.collect(Collectors.toList());
+								.toList();
 						for (index = 0; index < indices.size(); index++) {
 							if (index < indices.get(index)) {
 								break;
@@ -347,6 +357,9 @@ public class DirectMessageListenerContainer extends AbstractMessageListenerConta
 				}
 				reduceConsumersIfIdle(newCount, queue);
 			}
+		}
+		finally {
+			this.consumersLock.unlock();
 		}
 	}
 
@@ -367,9 +380,8 @@ public class DirectMessageListenerContainer extends AbstractMessageListenerConta
 	}
 
 	/**
-	 * When adjusting down, return a consumer that can be canceled. Called while
-	 * synchronized on consumersMonitor.
-	 * @return the consumer index or -1 if non idle.
+	 * When adjusting down, return a consumer that can be canceled. Called while locked on {@link #consumersLock}.
+	 * @return the consumer index or -1 if non-idle.
 	 * @since 2.0.6
 	 */
 	protected int findIdleConsumer() {
@@ -482,11 +494,12 @@ public class DirectMessageListenerContainer extends AbstractMessageListenerConta
 			checkIdle(idleEventInterval, now);
 			checkConsumers(now);
 			if (this.lastRestartAttempt + getFailedDeclarationRetryInterval() < now) {
-				synchronized (this.consumersMonitor) {
+				this.consumersLock.lock();
+				try {
 					if (this.started) {
 						List<SimpleConsumer> restartableConsumers = new ArrayList<>(this.consumersToRestart);
 						this.consumersToRestart.clear();
-						if (restartableConsumers.size() > 0) {
+						if (!restartableConsumers.isEmpty()) {
 							doRedeclareElementsIfNecessary();
 						}
 						Iterator<SimpleConsumer> iterator = restartableConsumers.iterator();
@@ -509,6 +522,9 @@ public class DirectMessageListenerContainer extends AbstractMessageListenerConta
 						this.lastRestartAttempt = now;
 					}
 				}
+				finally {
+					this.consumersLock.unlock();
+				}
 			}
 			processMonitorTask();
 		}, Duration.ofMillis(this.monitorInterval));
@@ -524,7 +540,8 @@ public class DirectMessageListenerContainer extends AbstractMessageListenerConta
 
 	private void checkConsumers(long now) {
 		final List<SimpleConsumer> consumersToCancel;
-		synchronized (this.consumersMonitor) {
+		this.consumersLock.lock();
+		try {
 			consumersToCancel = this.consumers.stream()
 					.filter(consumer -> {
 						boolean open = consumer.getChannel().isOpen() && !consumer.isAckFailed()
@@ -540,6 +557,9 @@ public class DirectMessageListenerContainer extends AbstractMessageListenerConta
 						return !open;
 					})
 					.collect(Collectors.toList());
+		}
+		finally {
+			this.consumersLock.unlock();
 		}
 		consumersToCancel
 				.forEach(consumer -> {
@@ -591,7 +611,8 @@ public class DirectMessageListenerContainer extends AbstractMessageListenerConta
 	}
 
 	private void startConsumers(final String[] queueNames) {
-		synchronized (this.consumersMonitor) {
+		this.consumersLock.lock();
+		try {
 			if (this.hasStopped) { // container stopped before we got the lock
 				if (this.logger.isDebugEnabled()) {
 					this.logger.debug("Consumer start aborted - container stopping");
@@ -630,6 +651,9 @@ public class DirectMessageListenerContainer extends AbstractMessageListenerConta
 					DirectMessageListenerContainer.this.startedLatch.countDown();
 				}
 			}
+		}
+		finally {
+			this.consumersLock.unlock();
 		}
 	}
 
@@ -731,7 +755,8 @@ public class DirectMessageListenerContainer extends AbstractMessageListenerConta
 			}
 		}
 		SimpleConsumer consumer = consume(queue, index, connection);
-		synchronized (this.consumersMonitor) {
+		this.consumersLock.lock();
+		try {
 			if (consumer != null) {
 				this.cancellationLock.add(consumer);
 				this.consumers.add(consumer);
@@ -739,10 +764,14 @@ public class DirectMessageListenerContainer extends AbstractMessageListenerConta
 				if (this.logger.isInfoEnabled()) {
 					this.logger.info(consumer + " started");
 				}
-				if (getApplicationEventPublisher() != null) {
-					getApplicationEventPublisher().publishEvent(new AsyncConsumerStartedEvent(this, consumer));
+				ApplicationEventPublisher applicationEventPublisher = getApplicationEventPublisher();
+				if (applicationEventPublisher != null) {
+					applicationEventPublisher.publishEvent(new AsyncConsumerStartedEvent(this, consumer));
 				}
 			}
+		}
+		finally {
+			this.consumersLock.unlock();
 		}
 	}
 
@@ -814,7 +843,8 @@ public class DirectMessageListenerContainer extends AbstractMessageListenerConta
 	protected void shutdownAndWaitOrCallback(@Nullable Runnable callback) {
 		LinkedList<SimpleConsumer> canceledConsumers = null;
 		boolean waitForConsumers = false;
-		synchronized (this.consumersMonitor) {
+		this.consumersLock.lock();
+		try {
 			if (this.started || this.aborted) {
 				// Copy in the same order to avoid ConcurrentModificationException during remove in the
 				// cancelConsumer().
@@ -822,6 +852,9 @@ public class DirectMessageListenerContainer extends AbstractMessageListenerConta
 				actualShutDown(canceledConsumers);
 				waitForConsumers = true;
 			}
+		}
+		finally {
+			this.consumersLock.unlock();
 		}
 		if (waitForConsumers) {
 			LinkedList<SimpleConsumer> consumersToWait = canceledConsumers;
@@ -872,7 +905,7 @@ public class DirectMessageListenerContainer extends AbstractMessageListenerConta
 	}
 
 	/**
-	 * Must hold this.consumersMonitor.
+	 * Must hold this.consumersLock.
 	 * @param consumers a copy of this.consumers.
 	 */
 	private void actualShutDown(List<SimpleConsumer> consumers) {
@@ -1005,7 +1038,7 @@ public class DirectMessageListenerContainer extends AbstractMessageListenerConta
 		}
 
 		/**
-		 * Return the current epoch for this consumer; consumersMonitor must be held.
+		 * Return the current epoch for this consumer; consumersLock must be held.
 		 * @return the epoch.
 		 */
 		int getEpoch() {
@@ -1039,7 +1072,7 @@ public class DirectMessageListenerContainer extends AbstractMessageListenerConta
 		}
 
 		/**
-		 * Increment and return the current epoch for this consumer; consumersMonitor must
+		 * Increment and return the current epoch for this consumer; consumersLock must
 		 * be held.
 		 * @return the epoch.
 		 */
@@ -1323,13 +1356,17 @@ public class DirectMessageListenerContainer extends AbstractMessageListenerConta
 
 		void cancelConsumer(final String eventMessage) {
 			publishConsumerFailedEvent(eventMessage, true, null);
-			synchronized (DirectMessageListenerContainer.this.consumersMonitor) {
+			DirectMessageListenerContainer.this.consumersLock.lock();
+			try {
 				List<SimpleConsumer> list = DirectMessageListenerContainer.this.consumersByQueue.get(this.queue);
 				if (list != null) {
 					list.remove(this);
 				}
 				DirectMessageListenerContainer.this.consumers.remove(this);
 				addConsumerToRestart(this);
+			}
+			finally {
+				DirectMessageListenerContainer.this.consumersLock.unlock();
 			}
 			finalizeConsumer();
 		}
